# north-start-agi-hackathon

./: .gitignore  README.md  agent_example.py  agent_factory.py  agent_pipeline.py  api.py  config.py  docker-compose.yml  enviroment_setup.py  explore.ipynb  explore_2.ipynb  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  agent_example.py  base_agent.py  data_access_agent.py
chatbot_service/: agent_factory.py  helpers.py
examples/: api_gateway.py  database_connection.py  load_dataset.py
ui/: package-lock.json  package.json
ui/src/routes/: chat.tsx  index.tsx
ui/src/services/: databaseService.ts
utils/: __init__.py  database_connection.py
